@@ -32,4 +32,5 @@ check:
 		   lpbuildd.tests.test_check_implicit_pointer_functions \
 		   lpbuildd.tests.test_harness \
 		   lpbuildd.tests.test_translationtemplatesbuildmanager \
-		   lpbuildd.tests.test_sourcepackagerecipe
+		   lpbuildd.tests.test_sourcepackagerecipe \
+		   lpbuildd.tests.test_livefs
