@@ -130,6 +130,18 @@ def upgrade_to_115():
     in_file.close()
     out_file.close()
 
+def upgrade_to_120():
+    print "Upgrading %s to version 120" % conf_file
+    subprocess.call(["mv", conf_file, conf_file+"-prev115~"])
+    in_file = open(conf_file+"-prev120~", "r")
+    out_file = open(conf_file, "w")
+    out_file.write(in_file.read())
+    out_file.write(
+        "\n[livefilesystemmanager]\n"
+        "buildlivefspath = /usr/share/launchpad-buildd/slavebin/buildlivefs\n")
+    in_file.close()
+    out_file.close()
+
 if __name__ == "__main__":
     old_version = re.sub(r'[~-].*', '', old_version)
     if int(old_version) < 12:
@@ -150,4 +162,5 @@ if __name__ == "__main__":
         upgrade_to_110()
     if int(old_version) < 115:
         upgrade_to_115()
-
+    if int(old_version) < 120:
+        upgrade_to_120()
