@@ -31,3 +31,6 @@ buildrecipepath = /usr/share/launchpad-buildd/slavebin/buildrecipe
 [translationtemplatesmanager]
 generatepath = /usr/share/launchpad-buildd/slavebin/generate-translation-templates
 resultarchive = translation-templates.tar.gz
+
+[livefilesystemmanager]
+buildlivefspath = /usr/share/launchpad-buildd/slavebin/buildlivefs
